--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "redis": "docker compose up redis",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,6 +15,8 @@
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "ioredis": "5.3.2",
+    "nanoid": "4.0.2",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
